--- a/RocketNews/index.html
+++ b/RocketNews/index.html
@@ -25,7 +25,7 @@
                 <div id="area_email">
                     <p>Insira seu e-mail:</p>
                     <div id="email">
-                        <input type="email" placeholder="nome@rocketSeat.com" id="caixa_email">
+                        <input type="email" placeholder="nome@rocketSeat.com" id="caixa_email" onkeyup="verificarEmail()">
                         <img src="imagens/send.svg" alt="" id="img_send" onclick="envioEmail()">
                         
                     </div>
