--- a/RocketNews/index.html
+++ b/RocketNews/index.html
@@ -19,7 +19,8 @@
                     <h1>atualize ideias e informações em 5 minutos.</h1>
                     <p>tudo que você precisa saber para comeãr seu dia bem e infomado</p>
                     <p>noticias sobre o universo RocketSeat e tudo o que precisa para começar o dia melhor.
-                        perfeito para se preparar para codar.
+                        perfeito para se preparar para codar.☕
+                        
                     </p>
                 </div>
                 <div id="area_email">
@@ -32,8 +33,9 @@
                 </div>
 
                 <div id="ler_primeiro">
-                    <p>Deixe-me ler primeiro</p>
-                    <img src="imagens/arrow-right.svg" alt="icone para envio do email">
+                    <a href="#">
+                        <p>Deixe-me ler primeiro</p>
+                    </a>
                 </div>
             </div>
         </section>
