Desafio Pricing Table
Desafio da RocketSeat. Concluído com sucesso.
Site Responsivo.

--- a/Pricing Table/index.html
+++ b/Pricing Table/index.html
@@ -69,7 +69,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="bt-assinar">
+                <div class="bt-assinar-destaque">
                     <input type="button" value="ASSINAR">
                 </div>
             </div>
