--- a/RocketShoes/index.html
+++ b/RocketShoes/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Arthur Noronha">
-    <meta name="description" content="Vendas dos melhores sapatos...">
+    <meta name="description" content="Vendas dos melhores sapatos do Brasil...">
     <link rel="stylesheet" href="style.css">
     <title>Rocket Shoes</title>
 </head>
@@ -49,13 +49,13 @@
         </section>
         <section class="area-image">
             <div class="imagens">
-                <div class="img-foco">
-                    <img src="assets/tenis-1-ampliado.png" alt="">
+                <div class="img-foco" id="box-img">
+                    <img src="assets/tenis-1-ampliado.png" alt="" id="img-foco">
                 </div>
                 <div class="box-images">
-                    <img class="second-image" src="assets/tenis-2-galeria.png" alt="">
-                    <img class="second-image" src="assets/tenis-1-galeria.png" alt="">
-                    <img class="second-image" src="assets/tenis-3-galeria.png" alt="">
+                    <img class="second-image" src="assets/tenis-2-galeria.png" id="foto1" alt="imagem3"">
+                    <img class="second-image" src="assets/tenis-1-galeria.png"  id="foto2" alt="imagem3"">
+                    <img class="second-image" src="assets/tenis-3-galeria.png"  id="foto3" alt="imagem3">
                 </div>
             </div>
         </section>
@@ -66,10 +66,10 @@
         </div>
         <div class="social">
             <ul>
-                <li><a href="">FACEBOOK</a></li>
-                <li><a href="">INSTRAGRAM</a></li>
-                <li><a href="">YOUTUBE</a></li>
-                <li><a href="">TWITTER</a></li>
+                <li><a href="#">FACEBOOK</a></li>
+                <li><a href="#">INSTRAGRAM</a></li>
+                <li><a href="#">YOUTUBE</a></li>
+                <li><a href="#">TWITTER</a></li>
             </ul>
         </div>
         <div class="bt-explore">
