--- a/RocketCoffee/index.html
+++ b/RocketCoffee/index.html
@@ -79,7 +79,7 @@
             <div class="painel-mobile">
                 <div class="text-painel">
                     <h1>Great Coffee</h1>
-                    <h1 class="transparente">< Great Coffee/></h1>
+                    <h1 class="transparente">&lt;Great Coffee/&gt;</h1>
                 </div>
                 <div class="img-painel">
                     <img src="assets/rocket-coffee.png" alt="copos de café">
